crates/math-core/tests/snapshots/conversion_test__mathopen.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x+\\mathopen)y"
---
<math>
    <mi>x</mi>
    <mo>+</mo>
    <mo stretchy="false" lspace="0" rspace="0">)</mo>
    <mi>y</mi>
</math>
