crates/math-core/tests/snapshots/conversion_test__mathord_letter.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x \\mathord a y"
---
<math>
    <mi>x</mi>
    <mo stretchy="false" lspace="0" rspace="0">a</mo>
    <mi>y</mi>
</math>
