crates/math-core/tests/snapshots/conversion_test__mathord_mutli_arg.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x \\mathord{++} y"
---
<math>
    <mi>x</mi>
    <mpadded style="padding-left:0;padding-right:0;">
        <mrow>
            <mo lspace="0" rspace="0">+</mo>
            <mo lspace="0" rspace="0">+</mo>
        </mrow>
    </mpadded>
    <mi>y</mi>
</math>
