crates/math-core/tests/snapshots/conversion_test__mathord_no_arg.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x \\mathord{} y"
---
<math>
    <mi>x</mi>
    <mo lspace="0" rspace="0">⁣</mo>
    <mi>y</mi>
</math>
