crates/math-core/tests/snapshots/conversion_test__mathord_relation.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\mathord{=}y"
---
<math>
    <mi>x</mi>
    <mo stretchy="false" lspace="0" rspace="0">=</mo>
    <mi>y</mi>
</math>
