crates/math-core/tests/snapshots/conversion_test__mathrm_multiletter.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathrm{abc}"
---
<math>
    <mrow><mspace/><mi>abc</mi></mrow>
</math>
